# Fakebook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-to-eb.yml
src/Fakebook/: __init__.py  application.py  auth.py  home.html  models.py  style.css  views.py
src/Fakebook/models/: comment.py  datatypes.py  enums.py  friendrequest.py  friendslist.py  person.py  post.py  timeline.py  user.py
src/Fakebook/static/: home.css  index.js  style.css
src/Fakebook/static/css/: base.css  friends.css  home.css  layout.css  login.css  post.css  profile.css  search.css  signup.css
src/Fakebook/templates/: Login.html  base.html  friends.html  home.html  home.html.bck  index.html  layout.html  post.html  profile.html  search.html  signup.html
