[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Fakebook"
version = "0.0.1"
authors = [
  { name="Brian Nguyen" },
  { name="Caleb Hickman-Thomas" },
  { name="Christian Johnson" },
  { name="Connor White" },
  { name="Manolo Diaz" },
]
description = "Facebook-like social media web application"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "blinker==1.6.3",
    "click==8.1.7",
    "colorama==0.4.6",
    "Flask==3.0.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "Werkzeug==3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/the-brain711/Fakebook"
